Add AWS SAM implementation
